# DynOSAM

./: .gitignore  .pre-commit-config.yaml  README.md  READMEv2.md  index.html
docker/: Dockerfile  Dockerfile.amd64  (+9 more)
dynosam_common/: CMakeLists.txt  package.xml
dynosam_common/include/dynosam_common/: Algorithms.hpp  Cuda.hpp  DynamicObjects.hpp  Exceptions.hpp  GroundTruthPacket.hpp  Map.hpp  MapNodes-inl.hpp  MapNodes.hpp  ModuleBase.hpp  ModuleFactory.hpp  PointCloudProcess.hpp  SensorModels.hpp  SharedModuleInfo.hpp  StructuredContainers.hpp  Types-inl.hpp  Types.hpp
dynosam_common/include/dynosam_common/byte_tracker/: ByteTracker.hpp  Detection.hpp  KalmanFilter.hpp  Lapjv.hpp  Rect.hpp  Track.hpp
dynosam_common/include/dynosam_common/logger/: Logger.hpp
dynosam_common/include/dynosam_common/utils/: Accumulator.hpp  CsvParser.hpp  FileSystem.hpp  GtsamUtils.hpp  Histogram.hpp  JsonUtils.hpp  Macros.hpp  Metrics.hpp  Numerical.hpp  OpenCVUtils.hpp  SafeCast.hpp  Spinner.hpp  Statistics.hpp  Timing.hpp  TimingStats.hpp  Tuple.hpp  Variant.hpp  YamlParser.hpp
dynosam_common/include/dynosam_common/viz/: Colour.hpp
dynosam_common/src/: Algorithms.cc  DynamicObjects.cc  GroundTruthPacket.cc  Map.cc  MapNodes.cc  ModuleFactory.cc  OptimizationDefinitions.cc  PointCloudProcess.cc  SensorModels.cc  SharedModuleInfo.cc  StructuredContainers.cc  Types.cc
dynosam_common/src/byte_tracker/: ByteTracker.cc  Detection.cc  KalmanFilter.cc  Lapjv.cc  Rect.cc  Track.cc
dynosam_common/src/logger/: Logger.cc
dynosam_common/src/utils/: CsvParser.cc  FileSystem.cc  GtsamUtils.cc  Histogram.cc  Metrics.cc  OpenCVUtils.cc  Spinner.cc  Statistics.cc  TimingStats.cc
dynosam_common/src/viz/: Colour.cc
dynosam_cv/: CMakeLists.txt  package.xml
dynosam_cv/include/dynosam_cv/: Camera.hpp  CameraParams.hpp  Feature.hpp  ImageContainer.hpp  ImageTypes-inl.hpp  ImageTypes.hpp  RGBDCamera.hpp  StereoCamera.hpp  UndistortRectifier.hpp
dynosam_cv/src/: Camera.cc  CameraParams.cc  Feature.cc  ImageContainer.cc  ImageTypes.cc  RGBDCamera.cc  StereoCamera.cc  UndistortRectifier.cc
dynosam_cv/test/: test_cuda_cache.cc  test_main.cc
dynosam_nn/: CMakeLists.txt  README.md  package.xml
dynosam_nn/cmake/: ConfigExtras.cmake
dynosam_nn/dynosam_nn_py/: __init__.py  object_detection.py  test.py  utils.py
dynosam_nn/export/: export_yolo_tensorrt.py  export_yolov11_onnx.py
dynosam_nn/include/dynosam_nn/: CudaUtils.hpp  ModelConfig.hpp  ObjectDetector.hpp  PyObjectDetector.hpp  PyWrapper.hpp  TrtUtilities.hpp  YOLOV11.hpp  YoloObjectDetector.hpp  YoloV8CudaUtils.hpp  YoloV8ObjectDetector.hpp  YoloV8Utils.hpp  cuda_utils.hpp
dynosam_nn/include/dynosam_nn/bindings/: PyBoostWrapper.hpp  cvnp.hpp  cvnp_synonyms.hpp
dynosam_nn/include/dynosam_nn/trackers/: ObjectTracker.hpp
dynosam_nn/include/dynosam_nn/trackers/byte_tracker/: ByteTracker.hpp  KalmanFilter.hpp  README.md  STrack.hpp  lapjv.hpp
dynosam_nn/nodes/: ImageSegmenterNode.cc  test_nn.cc
dynosam_nn/src/: CudaUtils.cc  ModelConfig.cc  ObjectDetector.cc  PyBindWrapper.cc  PyObjectDetector.cc  PyWrapper.cc  TrtUtilities.cc  YOLOV11.cc  YoloObjectDetector.cc  YoloV8CudaUtils.cu  YoloV8ObjectDetector.cc  yolov11_preprocess.cu  yolov8_postprocess.cu
dynosam_nn/src/bindings/: PyBindings.cc  PyBoostWrapper.cc  cvnp.cc  cvnp_synonyms.cc
dynosam_nn/src/trackers/: ObjectTracker.cc
dynosam_nn/src/trackers/byte_tracker/: ByteTracker.cc  KalmanFilter.cc  Rect.cc  STrack.cc  lapjv.cc
dynosam_opt_common/: CMakeLists.txt  package.xml
dynosam_opt_common/include/dynosam_opt_common/: FactorGraphTools.hpp  Map.hpp  MapNodes-inl.hpp  MapNodes.hpp  Symbols.hpp
dynosam_opt_common/src/: FactorGraphTools.cc  Symbols.cc
dynosam_ros/: CMakeLists.txt  package.xml
dynosam_ros/dynosam_ros/: DynosamNode.py  dynosam_node.py  launch_utils.py
dynosam_ros/include/dynosam_ros/: BackendDisplayPolicyRos.hpp  BackendPolicyRos.hpp  DataProviderRos.hpp  FormulationFactoryPlugin.hpp  MultiImageSync.hpp  MultiSync.hpp  OnlineDataProviderRos.hpp  PipelineRos.hpp  RosUtils.hpp  Utils.hpp
dynosam_ros/include/dynosam_ros/adaptors/: CameraParamsAdaptor.hpp  ImuMeasurementAdaptor.hpp
dynosam_ros/include/dynosam_ros/displays/: BackendDisplayRos.hpp  DisplaysCommon.hpp
dynosam_ros/include/dynosam_ros/displays/backend_displays/: HybridBackendDisplay.hpp
dynosam_ros/include/dynosam_ros/displays/backend_impl/: HybridBackendDisplay.hpp
dynosam_ros/include/dynosam_ros/displays/dynamic_slam_displays/: BackendDSDRos.hpp  DSDCommonRos.hpp  FrontendDSDRos.hpp  MPCEstimationVizRos.hpp
dynosam_ros/launch/: bl_dynosam.launch.py  dyno_sam_launch.py  dyno_sam_online_launch.py  dyno_sam_online_rgbd_launch.py  dynosam_tracking_demo_launch.xml
dynosam_ros/nodes/: backend_experiments_node.cc  dynosam_tracking_demo_node.cc
dynosam_ros/rviz/: rviz_dsd.rviz
dynosam_ros/scripts/: run_dynosam_gtest.py
dynosam_ros/src/: DataProviderRos.cc  FormulationFactoryPlugin.cc  MultiImageSync.cc  OnlineDataProviderRos.cc  PipelineRos.cc  RosUtils.cc  Utils.cc
dynosam_ros/src/displays/: DisplaysCommon.cc
dynosam_ros/src/displays/backend_displays/: HybridBackendDisplay.cc
dynosam_ros/src/displays/backend_impl/: HybridBackendDisplay.cc
dynosam_ros/src/displays/dynamic_slam_displays/: BackendDSDRos.cc  DSDCommonRos.cc  FrontendDSDRos.cc  MPCEstimationVizRos.cc
dynosam_ros/src/displays/inbuilt_displays/: BackendInbuiltDisplayRos.cc  InbuiltDisplayCommon.cc
dynosam_ros/test/: darin_simulations.cc  formulation_plugins.cc  formulation_plugins.hpp  test_backend_display_factory.cc  test_formulation_plugins.cc  test_online_dataprovider_ros.cc  test_package.xml  test_plugins.xml
dynosam_vision_common/: CMakeLists.txt  package.xml
dynosam_vision_common/include/dynosam_vision_common/: Camera.hpp  Feature.hpp  ImageContainer.hpp  ImageTypes-inl.hpp  ImageTypes.hpp  RGBDCamera.hpp  StereoCamera.hpp  UndistortRectifier.hpp
dynosam_vision_common/src/: Camera.cc  CameraParams.cc  Feature.cc  ImageContainer.cc  ImageTypes.cc  RGBDCamera.cc  StereoCamera.cc  UndistortRectifier.cc
(+6678 files in other folders)
