<?xml version="1.0"?>
<package format="2">
  <name>dynosam_common</name>
  <version>0.0.1</version>
  <description>DynOSAM Common package and includes all common deps</description>

  <maintainer email="yiduo.wang@sydney.edu.au">Yiduo Wang</maintainer>
  <maintainer email="jesse.morris@sydney.edu.au">Jesse Morris</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

 <buildtool_depend>ament_cmake</buildtool_depend>
 <depend>gtsam</depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>eigen_catkin</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>opencv</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_index_cpp</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
