<?xml version="1.0"?>
<package format="2">
  <name>dynosam_opt_common</name>
  <version>0.0.1</version>
  <description>DynOSAM Optimization Common package</description>

  <maintainer email="jesse.morris@sydney.edu.au">Jesse Morris</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

 <buildtool_depend>ament_cmake</buildtool_depend>
 <depend>dynosam_common</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
