<?xml version="1.0"?>
<package format="2">
  <name>dynosam_vision_common</name>
  <version>0.0.1</version>
  <description>DynOSAM Vision Common package</description>

  <maintainer email="yiduo.wang@sydney.edu.au">Yiduo Wang</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

 <buildtool_depend>ament_cmake</buildtool_depend>
 <depend>dynosam_common</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
